tests/snapshots/tokenize__cast.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 25:1\nIdentifier(main) at 25:5\n( at 25:9\n) at 25:10\n{ at 25:12\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(131585, None) at 26:10\n, at 26:16\n( at 26:18\nint at 26:19\n) at 26:22\nIntLiteral(8590066177, None) at 26:23\n, at 26:33\nStringLiteral(\"(int)8590066177\") at 26:35\n) at 26:52\n; at 26:53\nIdentifier(assert) at 27:3\n( at 27:9\nIntLiteral(513, None) at 27:10\n, at 27:13\n( at 27:15\nshort at 27:16\n) at 27:21\nIntLiteral(8590066177, None) at 27:22\n, at 27:32\nStringLiteral(\"(short)8590066177\") at 27:34\n) at 27:53\n; at 27:54\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(1, None) at 28:10\n, at 28:11\n( at 28:13\nchar at 28:14\n) at 28:18\nIntLiteral(8590066177, None) at 28:19\n, at 28:29\nStringLiteral(\"(char)8590066177\") at 28:31\n) at 28:49\n; at 28:50\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(1, None) at 29:10\n, at 29:11\n( at 29:13\nlong at 29:14\n) at 29:18\nIntLiteral(1, None) at 29:19\n, at 29:20\nStringLiteral(\"(long)1\") at 29:22\n) at 29:31\n; at 29:32\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(0, None) at 30:10\n, at 30:11\n( at 30:13\nlong at 30:14\n) at 30:18\n& at 30:19\n* at 30:20\n( at 30:21\nint at 30:22\n* at 30:26\n) at 30:27\nIntLiteral(0, None) at 30:28\n, at 30:29\nStringLiteral(\"(long)&*(int *)0\") at 30:31\n) at 30:49\n; at 30:50\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(513, None) at 31:10\n, at 31:13\n( at 31:15\n{ at 31:16\nint at 31:18\nIdentifier(x) at 31:22\n= at 31:23\nIntLiteral(512, None) at 31:24\n; at 31:27\n* at 31:29\n( at 31:30\nchar at 31:31\n* at 31:36\n) at 31:37\n& at 31:38\nIdentifier(x) at 31:39\n= at 31:40\nIntLiteral(1, None) at 31:41\n; at 31:42\nIdentifier(x) at 31:44\n; at 31:45\n} at 31:47\n) at 31:48\n, at 31:49\nStringLiteral(\"({ int 513=512; *(char *)&513=1; 513; })\") at 31:51\n) at 31:93\n; at 31:94\nIdentifier(assert) at 32:3\n( at 32:9\nIntLiteral(5, None) at 32:10\n, at 32:11\n( at 32:13\n{ at 32:14\nint at 32:16\nIdentifier(x) at 32:20\n= at 32:21\nIntLiteral(5, None) at 32:22\n; at 32:23\nlong at 32:25\nIdentifier(y) at 32:30\n= at 32:31\n( at 32:32\nlong at 32:33\n) at 32:37\n& at 32:38\nIdentifier(x) at 32:39\n; at 32:40\n* at 32:42\n( at 32:43\nint at 32:44\n* at 32:47\n) at 32:48\nIdentifier(y) at 32:49\n; at 32:50\n} at 32:52\n) at 32:53\n, at 32:54\nStringLiteral(\"({ int 5=5; long ({ int x=5; long y=(long)&x; *(int*)y; })=(long)&5; *(int*)({ int x=5; long y=(long)&x; *(int*)y; }); })\") at 32:56\n) at 32:179\n; at 32:180\n( at 34:3\nvoid at 34:4\n) at 34:8\nIntLiteral(1, None) at 34:9\n; at 34:10\nIdentifier(assert) at 36:3\n( at 36:9\n- at 36:10\nIntLiteral(1, None) at 36:11\n, at 36:12\n( at 36:14\nchar at 36:15\n) at 36:19\nIntLiteral(255, None) at 36:20\n, at 36:23\nStringLiteral(\"(char)255\") at 36:25\n) at 36:36\n; at 36:37\nIdentifier(assert) at 37:3\n( at 37:9\n- at 37:10\nIntLiteral(1, None) at 37:11\n, at 37:12\n( at 37:14\nIdentifier(signed) at 37:15\nchar at 37:22\n) at 37:26\nIntLiteral(255, None) at 37:27\n, at 37:30\nStringLiteral(\"(signed char)255\") at 37:32\n) at 37:50\n; at 37:51\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(255, None) at 38:10\n, at 38:13\n( at 38:15\nunsigned at 38:16\nchar at 38:25\n) at 38:29\nIntLiteral(255, None) at 38:30\n, at 38:33\nStringLiteral(\"(unsigned char)255\") at 38:35\n) at 38:55\n; at 38:56\nIdentifier(assert) at 39:3\n( at 39:9\n- at 39:10\nIntLiteral(1, None) at 39:11\n, at 39:12\n( at 39:14\nshort at 39:15\n) at 39:20\nIntLiteral(65535, None) at 39:21\n, at 39:26\nStringLiteral(\"(short)65535\") at 39:28\n) at 39:42\n; at 39:43\nIdentifier(assert) at 40:3\n( at 40:9\nIntLiteral(65535, None) at 40:10\n, at 40:15\n( at 40:17\nunsigned at 40:18\nshort at 40:27\n) at 40:32\nIntLiteral(65535, None) at 40:33\n, at 40:38\nStringLiteral(\"(unsigned short)65535\") at 40:40\n) at 40:63\n; at 40:64\nIdentifier(assert) at 41:3\n( at 41:9\n- at 41:10\nIntLiteral(1, None) at 41:11\n, at 41:12\n( at 41:14\nint at 41:15\n) at 41:18\nIntLiteral(0, None) at 41:19\nIdentifier(xffffffff) at 41:20\n, at 41:29\nStringLiteral(\"(int)0xffffffff\") at 41:31\n) at 41:48\n; at 41:49\nIdentifier(assert) at 42:3\n( at 42:9\nIntLiteral(0, None) at 42:10\nIdentifier(xffffffff) at 42:11\n, at 42:20\n( at 42:22\nunsigned at 42:23\n) at 42:31\nIntLiteral(0, None) at 42:32\nIdentifier(xffffffff) at 42:33\n, at 42:42\nStringLiteral(\"(unsigned)0xffffffff\") at 42:44\n) at 42:66\n; at 42:67\nIdentifier(assert) at 44:3\n( at 44:9\nIntLiteral(1, None) at 44:10\n, at 44:11\n- at 44:13\nIntLiteral(1, None) at 44:14\n< at 44:15\nIntLiteral(1, None) at 44:16\n, at 44:17\nStringLiteral(\"-1<1\") at 44:19\n) at 44:25\n; at 44:26\nIdentifier(assert) at 45:3\n( at 45:9\nIntLiteral(0, None) at 45:10\n, at 45:11\n- at 45:13\nIntLiteral(1, None) at 45:14\n< at 45:15\n( at 45:16\nunsigned at 45:17\n) at 45:25\nIntLiteral(1, None) at 45:26\n, at 45:27\nStringLiteral(\"-1<(unsigned)1\") at 45:29\n) at 45:45\n; at 45:46\nIdentifier(assert) at 46:3\n( at 46:9\nIntLiteral(254, None) at 46:10\n, at 46:13\n( at 46:15\nchar at 46:16\n) at 46:20\nIntLiteral(127, None) at 46:21\n+ at 46:24\n( at 46:25\nchar at 46:26\n) at 46:30\nIntLiteral(127, None) at 46:31\n, at 46:34\nStringLiteral(\"(char)127+(char)127\") at 46:36\n) at 46:57\n; at 46:58\nIdentifier(assert) at 47:3\n( at 47:9\nIntLiteral(65534, None) at 47:10\n, at 47:15\n( at 47:17\nshort at 47:18\n) at 47:23\nIntLiteral(32767, None) at 47:24\n+ at 47:29\n( at 47:30\nshort at 47:31\n) at 47:36\nIntLiteral(32767, None) at 47:37\n, at 47:42\nStringLiteral(\"(short)32767+(short)32767\") at 47:44\n) at 47:71\n; at 47:72\nIdentifier(assert) at 48:3\n( at 48:9\n- at 48:10\nIntLiteral(1, None) at 48:11\n, at 48:12\n- at 48:14\nIntLiteral(1, None) at 48:15\n>> at 48:16\nIntLiteral(1, None) at 48:18\n, at 48:19\nStringLiteral(\"-1>>1\") at 48:21\n) at 48:28\n; at 48:29\nIdentifier(assert) at 49:3\n( at 49:9\n- at 49:10\nIntLiteral(1, None) at 49:11\n, at 49:12\n( at 49:14\nunsigned at 49:15\nlong at 49:24\n) at 49:28\n- at 49:29\nIntLiteral(1, None) at 49:30\n, at 49:31\nStringLiteral(\"(unsigned long)-1\") at 49:33\n) at 49:52\n; at 49:53\nIdentifier(assert) at 50:3\n( at 50:9\nIntLiteral(2147483647, None) at 50:10\n, at 50:20\n( at 50:22\n( at 50:23\nunsigned at 50:24\n) at 50:32\n- at 50:33\nIntLiteral(1, None) at 50:34\n) at 50:35\n>> at 50:36\nIntLiteral(1, None) at 50:38\n, at 50:39\nStringLiteral(\"((unsigned)-1)>>1\") at 50:41\n) at 50:60\n; at 50:61\nIdentifier(assert) at 51:3\n( at 51:9\n- at 51:10\nIntLiteral(50, None) at 51:11\n, at 51:13\n( at 51:15\n- at 51:16\nIntLiteral(100, None) at 51:17\n) at 51:20\n/ at 51:21\nIntLiteral(2, None) at 51:22\n, at 51:23\nStringLiteral(\"(-100)/2\") at 51:25\n) at 51:35\n; at 51:36\nIdentifier(assert) at 52:3\n( at 52:9\nIntLiteral(2147483598, None) at 52:10\n, at 52:20\n( at 52:22\n( at 52:23\nunsigned at 52:24\n) at 52:32\n- at 52:33\nIntLiteral(100, None) at 52:34\n) at 52:37\n/ at 52:38\nIntLiteral(2, None) at 52:39\n, at 52:40\nStringLiteral(\"((unsigned)-100)/2\") at 52:42\n) at 52:62\n; at 52:63\nIdentifier(assert) at 53:3\n( at 53:9\nIntLiteral(9223372036854775758, None) at 53:10\n, at 53:29\n( at 53:31\n( at 53:32\nunsigned at 53:33\nlong at 53:42\n) at 53:46\n- at 53:47\nIntLiteral(100, None) at 53:48\n) at 53:51\n/ at 53:52\nIntLiteral(2, None) at 53:53\n, at 53:54\nStringLiteral(\"((unsigned long)-100)/2\") at 53:56\n) at 53:81\n; at 53:82\nIdentifier(assert) at 54:3\n( at 54:9\nIntLiteral(0, None) at 54:10\n, at 54:11\n( at 54:13\n( at 54:14\nlong at 54:15\n) at 54:19\n- at 54:20\nIntLiteral(1, None) at 54:21\n) at 54:22\n/ at 54:23\n( at 54:24\nunsigned at 54:25\n) at 54:33\nIntLiteral(100, None) at 54:34\n, at 54:37\nStringLiteral(\"((long)-1)/(unsigned)100\") at 54:39\n) at 54:65\n; at 54:66\nIdentifier(assert) at 55:3\n( at 55:9\n- at 55:10\nIntLiteral(2, None) at 55:11\n, at 55:12\n( at 55:14\n- at 55:15\nIntLiteral(100, None) at 55:16\n) at 55:19\n% at 55:20\nIntLiteral(7, None) at 55:21\n, at 55:22\nStringLiteral(\"(-100)%7\") at 55:24\n) at 55:34\n; at 55:35\nIdentifier(assert) at 56:3\n( at 56:9\nIntLiteral(2, None) at 56:10\n, at 56:11\n( at 56:13\n( at 56:14\nunsigned at 56:15\n) at 56:23\n- at 56:24\nIntLiteral(100, None) at 56:25\n) at 56:28\n% at 56:29\nIntLiteral(7, None) at 56:30\n, at 56:31\nStringLiteral(\"((unsigned)-100)%7\") at 56:33\n) at 56:53\n; at 56:54\nIdentifier(assert) at 57:3\n( at 57:9\nIntLiteral(6, None) at 57:10\n, at 57:11\n( at 57:13\n( at 57:14\nunsigned at 57:15\nlong at 57:24\n) at 57:28\n- at 57:29\nIntLiteral(100, None) at 57:30\n) at 57:33\n% at 57:34\nIntLiteral(9, None) at 57:35\n, at 57:36\nStringLiteral(\"((unsigned long)-100)%9\") at 57:38\n) at 57:63\n; at 57:64\nIdentifier(assert) at 59:3\n( at 59:9\nIntLiteral(65535, None) at 59:10\n, at 59:15\n( at 59:17\nint at 59:18\n) at 59:21\n( at 59:22\nunsigned at 59:23\nshort at 59:32\n) at 59:37\nIntLiteral(65535, None) at 59:38\n, at 59:43\nStringLiteral(\"(int)(unsigned short)65535\") at 59:45\n) at 59:73\n; at 59:74\nIdentifier(assert) at 60:3\n( at 60:9\nIntLiteral(65535, None) at 60:10\n, at 60:15\n( at 60:17\n{ at 60:18\nunsigned at 60:20\nshort at 60:29\nIdentifier(x) at 60:35\n= at 60:37\nIntLiteral(65535, None) at 60:39\n; at 60:44\nIdentifier(x) at 60:46\n; at 60:47\n} at 60:49\n) at 60:50\n, at 60:51\nStringLiteral(\"({ unsigned short 65535 = 65535; 65535; })\") at 60:53\n) at 60:97\n; at 60:98\nIdentifier(assert) at 61:3\n( at 61:9\nIntLiteral(65535, None) at 61:10\n, at 61:15\n( at 61:17\n{ at 61:18\nunsigned at 61:20\nshort at 61:29\nIdentifier(x) at 61:35\n= at 61:37\nIntLiteral(65535, None) at 61:39\n; at 61:44\n( at 61:46\nint at 61:47\n) at 61:50\nIdentifier(x) at 61:51\n; at 61:52\n} at 61:54\n) at 61:55\n, at 61:56\nStringLiteral(\"({ unsigned short 65535 = 65535; (int)65535; })\") at 61:58\n) at 61:107\n; at 61:108\nIdentifier(assert) at 63:3\n( at 63:9\n- at 63:10\nIntLiteral(1, None) at 63:11\n, at 63:12\n( at 63:14\n{ at 63:15\ntypedef at 63:17\nshort at 63:25\nIdentifier(T) at 63:31\n; at 63:32\nIdentifier(T) at 63:34\nIdentifier(x) at 63:36\n= at 63:38\nIntLiteral(65535, None) at 63:40\n; at 63:45\n( at 63:47\nint at 63:48\n) at 63:51\nIdentifier(x) at 63:52\n; at 63:53\n} at 63:55\n) at 63:56\n, at 63:57\nStringLiteral(\"({ typedef short T; T -1 = 65535; (int)-1; })\") at 63:59\n) at 63:106\n; at 63:107\nIdentifier(assert) at 64:3\n( at 64:9\nIntLiteral(65535, None) at 64:10\n, at 64:15\n( at 64:17\n{ at 64:18\ntypedef at 64:20\nunsigned at 64:28\nshort at 64:37\nIdentifier(T) at 64:43\n; at 64:44\nIdentifier(T) at 64:46\nIdentifier(x) at 64:48\n= at 64:50\nIntLiteral(65535, None) at 64:52\n; at 64:57\n( at 64:59\nint at 64:60\n) at 64:63\nIdentifier(x) at 64:64\n; at 64:65\n} at 64:67\n) at 64:68\n, at 64:69\nStringLiteral(\"({ typedef unsigned short T; T 65535 = 65535; (int)65535; })\") at 64:71\n) at 64:133\n; at 64:134\nIdentifier(assert) at 66:3\n( at 66:9\nIntLiteral(0, None) at 66:10\n, at 66:11\n( at 66:13\nIdentifier(_Bool) at 66:14\n) at 66:19\nFloatLiteral(0, None) at 66:20\n, at 66:23\nStringLiteral(\"(_Bool)0.0\") at 66:25\n) at 66:37\n; at 66:38\nIdentifier(assert) at 67:3\n( at 67:9\nIntLiteral(1, None) at 67:10\n, at 67:11\n( at 67:13\nIdentifier(_Bool) at 67:14\n) at 67:19\nFloatLiteral(0.1, None) at 67:20\n, at 67:23\nStringLiteral(\"(_Bool)0.1\") at 67:25\n) at 67:37\n; at 67:38\nIdentifier(assert) at 68:3\n( at 68:9\nIntLiteral(3, None) at 68:10\n, at 68:11\n( at 68:13\nchar at 68:14\n) at 68:18\nFloatLiteral(3, None) at 68:19\n, at 68:22\nStringLiteral(\"(char)3.0\") at 68:24\n) at 68:35\n; at 68:36\nIdentifier(assert) at 69:3\n( at 69:9\nIntLiteral(1000, None) at 69:10\n, at 69:14\n( at 69:16\nshort at 69:17\n) at 69:22\nFloatLiteral(1000.3, None) at 69:23\n, at 69:29\nStringLiteral(\"(short)1000.3\") at 69:31\n) at 69:46\n; at 69:47\nIdentifier(assert) at 70:3\n( at 70:9\nIntLiteral(3, None) at 70:10\n, at 70:11\n( at 70:13\nint at 70:14\n) at 70:17\nFloatLiteral(3.99, None) at 70:18\n, at 70:22\nStringLiteral(\"(int)3.99\") at 70:24\n) at 70:35\n; at 70:36\nIdentifier(assert) at 71:3\n( at 71:9\nIntLiteral(2000000000000000, None) at 71:10\n, at 71:26\n( at 71:28\nlong at 71:29\n) at 71:33\nFloatLiteral(2000000000000000, None) at 71:34\n, at 71:38\nStringLiteral(\"(long)2e15\") at 71:40\n) at 71:52\n; at 71:53\nIdentifier(assert) at 72:3\n( at 72:9\nIntLiteral(3, None) at 72:10\n, at 72:11\n( at 72:13\nfloat at 72:14\n) at 72:19\nFloatLiteral(3.5, None) at 72:20\n, at 72:23\nStringLiteral(\"(float)3.5\") at 72:25\n) at 72:37\n; at 72:38\nIdentifier(assert) at 73:3\n( at 73:9\nIntLiteral(5, None) at 73:10\n, at 73:11\n( at 73:13\ndouble at 73:14\n) at 73:20\n( at 73:21\nfloat at 73:22\n) at 73:27\nFloatLiteral(5.5, None) at 73:28\n, at 73:31\nStringLiteral(\"(double)(float)5.5\") at 73:33\n) at 73:53\n; at 73:54\nIdentifier(assert) at 74:3\n( at 74:9\nIntLiteral(3, None) at 74:10\n, at 74:11\n( at 74:13\nfloat at 74:14\n) at 74:19\nIntLiteral(3, None) at 74:20\n, at 74:21\nStringLiteral(\"(float)3\") at 74:23\n) at 74:33\n; at 74:34\nIdentifier(assert) at 75:3\n( at 75:9\nIntLiteral(3, None) at 75:10\n, at 75:11\n( at 75:13\ndouble at 75:14\n) at 75:20\nIntLiteral(3, None) at 75:21\n, at 75:22\nStringLiteral(\"(double)3\") at 75:24\n) at 75:35\n; at 75:36\nIdentifier(assert) at 76:3\n( at 76:9\nIntLiteral(3, None) at 76:10\n, at 76:11\n( at 76:13\nfloat at 76:14\n) at 76:19\nIntLiteral(3, Long) at 76:20\n, at 76:22\nStringLiteral(\"(float)3L\") at 76:24\n) at 76:35\n; at 76:36\nIdentifier(assert) at 77:3\n( at 77:9\nIntLiteral(3, None) at 77:10\n, at 77:11\n( at 77:13\ndouble at 77:14\n) at 77:20\nIntLiteral(3, Long) at 77:21\n, at 77:23\nStringLiteral(\"(double)3L\") at 77:25\n) at 77:37\n; at 77:38\nIdentifier(printf) at 79:3\n( at 79:9\nStringLiteral(\"OK\n\") at 79:10\n) at 79:16\n; at 79:17\nreturn at 80:3\nIntLiteral(0, None) at 80:10\n; at 80:11\n} at 81:1\nEOF at 82:1\n"
stderr: ""
status: 0
