tests/snapshots/tokenize__cast_basic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n; at 2:10\nlong at 3:5\nIdentifier(y) at 3:10\n; at 3:11\nchar at 4:5\nIdentifier(c) at 4:10\n; at 4:11\nIdentifier(x) at 6:5\n= at 6:7\nIntLiteral(42, None) at 6:9\n; at 6:11\nIdentifier(y) at 7:5\n= at 7:7\n( at 7:9\nlong at 7:10\n) at 7:14\nIdentifier(x) at 7:15\n; at 7:16\nIdentifier(c) at 8:5\n= at 8:7\n( at 8:9\nchar at 8:10\n) at 8:14\nIdentifier(y) at 8:15\n; at 8:16\nreturn at 10:5\n( at 10:12\nint at 10:13\n) at 10:16\nIdentifier(c) at 10:17\n; at 10:18\n} at 11:1\nEOF at 12:1\n"
stderr: ""
status: 0
