tests/snapshots/tokenize__cast_pointer.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n; at 2:10\nint at 3:5\n* at 3:8\nIdentifier(int_ptr) at 3:10\n; at 3:17\nlong at 4:5\n* at 4:9\nIdentifier(long_ptr) at 4:11\n; at 4:19\nchar at 5:5\n* at 5:9\nIdentifier(char_ptr) at 5:11\n; at 5:19\nIdentifier(x) at 7:5\n= at 7:7\nIntLiteral(123, None) at 7:9\n; at 7:12\nIdentifier(int_ptr) at 8:5\n= at 8:13\n& at 8:15\nIdentifier(x) at 8:16\n; at 8:17\nIdentifier(long_ptr) at 9:5\n= at 9:14\n( at 9:16\nlong at 9:17\n* at 9:21\n) at 9:22\nIdentifier(int_ptr) at 9:23\n; at 9:30\nIdentifier(char_ptr) at 10:5\n= at 10:14\n( at 10:16\nchar at 10:17\n* at 10:21\n) at 10:22\nIdentifier(long_ptr) at 10:23\n; at 10:31\nreturn at 12:5\n* at 12:12\n( at 12:13\n( at 12:14\nint at 12:15\n* at 12:18\n) at 12:19\nIdentifier(char_ptr) at 12:20\n) at 12:28\n; at 12:29\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
