tests/snapshots/tokenize__cast_truncate.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nlong at 2:5\nIdentifier(big) at 2:10\n; at 2:13\nint at 3:5\nIdentifier(medium) at 3:9\n; at 3:15\nshort at 4:5\nIdentifier(small) at 4:11\n; at 4:16\nchar at 5:5\nIdentifier(tiny) at 5:10\n; at 5:14\nIdentifier(big) at 7:5\n= at 7:9\nIntLiteral(300, None) at 7:11\n; at 7:14\nIdentifier(medium) at 8:5\n= at 8:12\n( at 8:14\nint at 8:15\n) at 8:18\nIdentifier(big) at 8:19\n; at 8:22\nIdentifier(small) at 9:5\n= at 9:11\n( at 9:13\nshort at 9:14\n) at 9:19\nIdentifier(medium) at 9:20\n; at 9:26\nIdentifier(tiny) at 10:5\n= at 10:10\n( at 10:12\nchar at 10:13\n) at 10:17\nIdentifier(small) at 10:18\n; at 10:23\nreturn at 13:5\n( at 13:12\nint at 13:13\n) at 13:16\nIdentifier(tiny) at 13:17\n; at 13:21\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
