tests/snapshots/tokenize__char_literal_arithmetic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nchar at 4:5\nIdentifier(a) at 4:10\n= at 4:12\nCharLiteral(97) at 4:14\n; at 4:17\nchar at 5:5\nIdentifier(b) at 5:10\n= at 5:12\nCharLiteral(98) at 5:14\n; at 5:17\nchar at 6:5\nIdentifier(c) at 6:10\n= at 6:12\nCharLiteral(99) at 6:14\n; at 6:17\nreturn at 11:5\nIdentifier(a) at 11:12\n+ at 11:14\nIdentifier(b) at 11:16\n+ at 11:18\nIdentifier(c) at 11:20\n; at 11:21\n} at 12:1\nEOF at 13:1\n"
stderr: ""
status: 0
