tests/snapshots/tokenize__char_literal_comparison.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nchar at 4:5\nIdentifier(x) at 4:10\n= at 4:12\nCharLiteral(120) at 4:14\n; at 4:17\nchar at 5:5\nIdentifier(y) at 5:10\n= at 5:12\nCharLiteral(121) at 5:14\n; at 5:17\nif at 7:5\n( at 7:8\nIdentifier(x) at 7:9\n< at 7:11\nIdentifier(y) at 7:13\n) at 7:14\n{ at 7:16\nreturn at 8:9\nIntLiteral(1) at 8:16\n; at 8:17\n} at 9:5\nreturn at 10:5\nIntLiteral(0) at 10:12\n; at 10:13\n} at 11:1\nEOF at 12:1\n"
stderr: ""
status: 0
