tests/snapshots/tokenize__char_literal_escape.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nchar at 4:5\nIdentifier(newline) at 4:10\n= at 4:18\nCharLiteral(10) at 4:20\n; at 4:24\nchar at 5:5\nIdentifier(tab) at 5:10\n= at 5:14\nCharLiteral(9) at 5:16\n; at 5:20\nchar at 6:5\nIdentifier(backslash) at 6:10\n= at 6:20\nCharLiteral(92) at 6:22\n; at 6:26\nreturn at 10:5\nIdentifier(newline) at 10:12\n+ at 10:20\nIdentifier(tab) at 10:22\n; at 10:25\n} at 11:1\nEOF at 12:1\n"
stderr: ""
status: 0
