tests/snapshots/tokenize__comma_operator.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(a) at 3:9\n= at 3:11\nIntLiteral(1, None) at 3:13\n; at 3:14\nint at 4:5\nIdentifier(b) at 4:9\n= at 4:11\nIntLiteral(2, None) at 4:13\n; at 4:14\nint at 5:5\nIdentifier(c) at 5:9\n; at 5:10\nIdentifier(c) at 8:5\n= at 8:7\n( at 8:9\nIdentifier(a) at 8:10\n++ at 8:11\n, at 8:13\nIdentifier(b) at 8:15\n++ at 8:16\n, at 8:18\nIdentifier(a) at 8:20\n+ at 8:22\nIdentifier(b) at 8:24\n) at 8:25\n; at 8:26\nint at 11:5\nIdentifier(x) at 11:9\n; at 11:10\nint at 12:5\nIdentifier(y) at 12:9\n; at 12:10\nIdentifier(x) at 13:5\n= at 13:7\n( at 13:9\nIdentifier(y) at 13:10\n= at 13:12\nIntLiteral(5, None) at 13:14\n, at 13:15\nIdentifier(y) at 13:17\n* at 13:19\nIntLiteral(2, None) at 13:21\n) at 13:22\n; at 13:23\nint at 16:5\nIdentifier(result) at 16:9\n= at 16:16\n( at 16:18\nIntLiteral(10, None) at 16:19\n, at 16:21\nIntLiteral(20, None) at 16:23\n, at 16:25\nIntLiteral(30, None) at 16:27\n) at 16:29\n; at 16:30\nreturn at 18:5\nIntLiteral(0, None) at 18:12\n; at 18:13\n} at 19:1\nEOF at 20:1\n"
stderr: ""
status: 0
