tests/snapshots/tokenize__comment_block.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(42) at 3:15\n; at 3:17\nreturn at 7:5\nIdentifier(x) at 7:12\n; at 7:13\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
